# flash-stm32f407

./: .gitignore  CMakeLists.txt  README.md  openocd.cfg
flash/: flash.c  flash.cmake  helper.c  helper.h  ihex.h  ihexhelper.c  ihexhelper.h
test/: CMakeLists.txt  ffconf.h  halconf.h  mcuconf.h  sdcard.c  sdcard.h  test.c
